<resources>
    <string name="app_name">Tracktive</string>
    <string name="content_authority" translatable="false">qorda_projects.tracktive.app</string>
    <string name="sync_account_type" translatable="false">tracktive.qorda_projects.com</string>
    <string name="diary_view">Diary View</string>
    <string name="options_fab">New Card, new diary entry and view diaries,</string>

    <!-- NEW CARD DIALOG -->
    <string name="build_new_card">Build a New Card</string>
    <string name="name_the_card_prompt">Name the card</string>
    <string name="eg_search_term">add a search term, e.g. refugees</string>
    <string name="eg_search_term_2">add another here</string>
    <string name="eg_search_term_3">leave blank if you don\'t need 3 terms</string>
    <string name="additional_term">additional search term</string>
    <string name="make_card">Make Card</string>
    <string name="cancel">Cancel</string>

    <!--Error dialog-->

    <string name="empty_story_list">No story information available, check your connection</string>

    <string name="adUnitId" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <string name="action_settings">Settings</string>

    <!--DIARY ENTRY-->
    <string name="diary_entry">Diary entry</string>
    <string name="new_diary_entry">New Diary Entry</string>
    <string name="date_placeholder">30th February 2140</string>
    <string name="diary_dialog_title_entry">Title</string>
    <string name="diary_dialog_body_entry">What are you thinking?</string>
    <string name="save_diary_entry">Save entry</string>

    <!--SHARED PREFERENCES -->
    <string name="pref_keywords_key" translatable="false">keywords-json-string</string>
    <string name="pref_keywords_label">Keywords</string>
    <string name="pref_keywords_default">migrants,mediterranean,justice</string>

    <string name="pref_card_titles_key" translatable="false">card_titles_json_string</string>
    <string name="pref_card_titles_label">Card Titles</string>
    <string name="pref_card_title_default">Migrant justice</string>

    <!--STORY DETAIL -->
    <!-- defaults-->
    <string name="story_default_title">Fracking hits all time high</string>
    <string name="story_default_content">Detail view for a news story - browser icon indicates that the whole article can be read online, will use an implicit intent to handle the URL. Bookmark icon is by default in grey</string>
    <string name="story_default_source">Manchester Evening News</string>
    <string name="story_default_date">7-11-17</string>
    <string name="story_detail_added_to_bookmarks">Story added to bookmarks!</string>
    <string name="story_detail_removed_from_bookmarks">Story removed from bookmarks!</string>
    <string name="open_story_in_browser">Open story in browser</string>

    <!--widget -->
    <string name="widget_description">All stories widget</string>

    <!--bookmarked-->
    <string name="bookmarked">Bookmarked story</string>
    <string name="un_bookmarked">Un bookmarked story</string>
    <string name="add_to_bookmarks">Add to bookmarks</string>
    <string name="remove_from_bookmarks">Remove from Bookmarks</string>

</resources>
