<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <!--TODO: need a header image -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
    >

        <ImageView
            android:src="@drawable/diary_icon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_title_height"
            android:scaleType="fitStart"
        />

        <TextView
            android:id="@+id/diary_dialog_header_card_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary_entry"/>

    </LinearLayout>

    <TextView
        android:id="@+id/diary_dialog_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_placeholder"/>

    <EditText
        android:id="@+id/diary_dialog_give_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/diary_dialog_title_entry"
    />

    <EditText
        android:id="@+id/diary_dialog_write_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/diary_dialog_body_entry"
    />

</LinearLayout>