<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:ads="http://schemas.android.com/apk/res-auto"

             android:layout_width="match_parent"
             android:layout_height="match_parent">

<LinearLayout android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/story_detail_title_text"
        android:text="@string/story_default_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_margin="@dimen/activity_vertical_margin"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginLeft="@dimen/activity_horizontal_margin"
                  android:layout_marginStart="@dimen/activity_horizontal_margin"
                  android:layout_marginRight="@dimen/activity_horizontal_margin"
                  android:layout_marginEnd="@dimen/activity_horizontal_margin"
    >

        <TextView
            android:id="@+id/story_detail_source_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Menu"
            android:textStyle="italic"
            android:text="@string/story_default_source"/>

        <TextView
            android:id="@+id/story_detail_date_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="italic"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Menu"
            android:text="@string/story_default_date"/>
    </LinearLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/story_detail_content_text"
        android:text="@string/story_default_content"
        android:layout_margin="@dimen/activity_vertical_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom|right">

        <ImageButton
            android:id="@+id/story_detail_bookmark_icon"
            android:scaleType="fitXY"
            android:layout_width="@dimen/button_icon_diameter"
            android:layout_height="@dimen/button_icon_diameter"
            android:src="@drawable/ic_bookmark_black_48dp"/>

        <ImageButton
            android:id="@+id/story_detail_browser_icon"
            android:scaleType="fitXY"
            android:layout_width="@dimen/button_icon_diameter"
            android:layout_height="@dimen/button_icon_diameter"
            android:src="@drawable/ic_language_black_48dp"/>

    </LinearLayout>

</LinearLayout>

<com.google.android.gms.ads.AdView
    android:id="@+id/adView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_gravity="bottom|center"
    ads:adSize="BANNER"
    ads:adUnitId="@string/adUnitId"
/>


</FrameLayout>

